Exercise 6 is done

--- a/src/experiments/avengers/Card.css
+++ b/src/experiments/avengers/Card.css
@@ -3,6 +3,8 @@
     background-color: rgb(189, 136, 73);
     border-radius: 20px;
     display: inline-block;
+    height: 349.812px;
+    width: 300px;
 }
 .card-image{
     height: 200px;
