--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,40 @@
 .read-the-docs {
   color: #888;
 }
+/* .inc{
+  background-color: rgb(43, 212, 43);
+  color: #000000;
+  font-weight: bold;
+}
+.dec{
+  background-color: rgb(253, 22, 22);
+  color: #000000;
+
+  font-weight: bold;
+}
+.res{
+  background-color: rgb(11, 138, 211);
+  color: #000000;
+  font-weight: bold;
+}
+button{
+  margin:5px;
+}
+.container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+body{
+  background-color: #0f0f0f;
+}
+h1{
+  color: #ffffff;
+  font-size: 2.5em;
+  margin-bottom: 1rem;
+}
+p{
+  color: #ffffff;
+  font-size: 1.2em;
+  margin-bottom: 1rem;
+} */
