--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@ body {
 #loginButton {
   padding: 10px;
   border-radius: 5px;
-  background-color: blue;
+  background-color: darkblue;
   color: white;
 }
 
@@ -91,4 +91,36 @@ body {
 #pass1 {
   padding: 10px;
   border-radius: 8px;
+}
+
+#cpass2{
+ padding: 10px;
+ border-radius: 8px; 
+}
+
+#address{
+  padding: 10px;
+ border-radius: 8px; 
+ width: 48%;
+}
+
+#imagePart{
+  border: 2px solid black;
+  border-radius: 12px;
+  padding: 10px;
+  width: 48%;
+}
+
+#role{
+  border: 2px solid black;
+  border-radius: 12px;
+  padding: 10px;
+  width: 48%;
+}
+
+#registrationPart{
+  border-radius: 8px;
+  padding: 10px;
+ background-color: darkblue;
+ color: white;
 }
