--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -101,5 +102,11 @@ button:focus-visible {
     align-items: center;
     flex-wrap: wrap;
     gap: 10px;
+    @import "tailwindcss";
+
+    :root {
+      font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+      line-height: 1.5;
+    }
   }
 }
