Tailwind container added

--- a/src/tailwindCss/exercise2/example.module.css
+++ b/src/tailwindCss/exercise2/example.module.css
@@ -42,7 +42,7 @@
 /* 5. Grid Layout */
 .gridLayout {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3,1fr);
   gap: 10px;
   margin-bottom: 20px;
 }
