React Exercise 7 to 9 done and working on my Header Footer Files

--- a/src/App.css
+++ b/src/App.css
@@ -148,3 +148,10 @@ font-family: castellar;
    border: 2px solid black;
   border-radius: 12px;
 }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 999;
+}
